--- a/src/content/sectors/ev-tekstili-ve-dekorasyon.yml
+++ b/src/content/sectors/ev-tekstili-ve-dekorasyon.yml
@@ -1,7 +1,7 @@
-name_tr: "Ev Tekstili ve Dekorasyon"
-name_en: "Home Textile & Decoration"
-slug: "ev-tekstili-ve-dekorasyon"
-order: 2
+name_tr: Ev Tekstili ve Dekorasyon
+name_en: Home Textile & Decoration
+slug: ev-tekstili-ve-dekorasyon
+order: 5
 is_active: true
-description_tr: "Ev tekstili, dekorasyon ve iç mekan ürünleri fuarları"
-description_en: "Home textile, decoration and interior products fairs"
+description_tr: ""
+description_en: ""
