Update Sektörler “guzellik-ve-kozmetik”

--- a/src/content/sectors/guzellik-ve-kozmetik.yml
+++ b/src/content/sectors/guzellik-ve-kozmetik.yml
@@ -1,7 +1,7 @@
-name_tr: "Güzellik ve Kozmetik"
-name_en: "Beauty & Cosmetics"
-slug: "guzellik-ve-kozmetik"
-order: 6
+name_tr: Güzellik ve Kozmetik
+name_en: Beauty & Cosmetics
+slug: guzellik-ve-kozmetik
+order: 8
 is_active: true
-description_tr: "Güzellik, kozmetik ve kişisel bakım ürünleri fuarları"
-description_en: "Beauty, cosmetics and personal care products fairs"
+description_tr: ""
+description_en: ""
