--- a/src/content/sectors/insaat.yml
+++ b/src/content/sectors/insaat.yml
@@ -1,7 +1,7 @@
-name_tr: "İnşaat"
-name_en: "Construction"
-slug: "insaat"
-order: 8
+name_tr: Yapı ve İnşaat
+name_en: Building and Construction
+slug: yapi-insaat
+order: 3
 is_active: true
-description_tr: "İnşaat, yapı malzemeleri ve mimarlık fuarları"
-description_en: "Construction, building materials and architecture fairs"
+description_tr: ""
+description_en: ""
