--- a/src/content/sectors/kalip-plastik-havuz.yml
+++ b/src/content/sectors/kalip-plastik-havuz.yml
@@ -1,7 +1,7 @@
-name_tr: "Kalıp & Plastik, İhtisas, Havuz"
-name_en: "Mold & Plastic"
-slug: "kalip-plastik-havuz"
-order: 4
+name_tr: Tel, Boru, Kalıp ve Plastik
+name_en: Wire, Pipe, Mold and Plastic
+slug: tel-boru-kalip-plastik
+order: 6
 is_active: true
-description_tr: "Kalıp, plastik, ihtisas ve havuz sektörü fuarları"
-description_en: "Mold, plastic, specialization and pool sector fairs"
+description_tr: ""
+description_en: ""
