Update Sektörler “moda-ve-tekstil”

--- a/src/content/sectors/moda-ve-tekstil.yml
+++ b/src/content/sectors/moda-ve-tekstil.yml
@@ -1,7 +1,7 @@
-name_tr: "Moda ve Tekstil"
-name_en: "Fashion & Textile"
-slug: "moda-ve-tekstil"
-order: 1
+name_tr: Tekne, Havuz ve Yan Sanayi
+name_en: Boat, Pool and Sub-Industry
+slug: tekne-havuz-yansanayi
+order: 7
 is_active: true
-description_tr: "Moda, tekstil, giyim ve aksesuar sektörü fuarları"
-description_en: "Fashion, textile, clothing and accessory sector fairs"
+description_tr: ""
+description_en: ""
