--- a/src/content/sectors/mobilya-ve-elektrik.yml
+++ b/src/content/sectors/mobilya-ve-elektrik.yml
@@ -1,7 +1,7 @@
-name_tr: "Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları"
-name_en: "Furniture & Lighting"
-slug: "mobilya-ve-elektrik"
-order: 3
+name_tr: Mobilya ve Mobilya Yan Sanayi
+name_en: Furniture and Furniture Sub-Industry
+slug: mobilya-mobilyayansanayi
+order: 4
 is_active: true
-description_tr: "Mobilya, yan sanayi, elektrik ve aydınlatma sektörü fuarları"
-description_en: "Furniture, auxiliary industry, electrical and lighting sector fairs"
+description_tr: ""
+description_en: ""
